${MIRROR_WGET}/download_package purl.obolibrary.org.pr.obo
${MIRROR_WGET}/download_package purl.obolibrary.org.uberon.obo
${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload 
${MIRROR_WGET}/download_package ftp.geneontology.org.goload 
${MIRROR_WGET}/download_package snapshot.geneontology.org.goload
${MIRROR_WGET}/download_package snapshot.geneontology.org.goload.noctua

TAG: goload-6-0-16-7
TAG: goload-6-0-16-6
DATE: 04/05/2021
STAFF: lec
TR13490/Annotations are being incorrectly filtered from the Noctua load
gomousenoctua
1) add user 'NOCTUA_GO_Noctua' to MGI_User
2) gpi changed from "PR  xxxx" to "PR:xxxx"

TAG: goload-6-0-16-5
DATE: 03/08/2021
STAFF: lec
TR13472/run complexes.tsv go_propery additions for every load
add 'proteincomplex.sh'

TAG: goload-6-0-16-4
DATE: 02/19/2021
STAFF: lec
CHANGES: TR13272/GO meeting/CalTech/tasks to-do
changes for GAF 2.1  -> GAF 2.2/col 4/qualifier
changes for GPAD 1.1 -> GPAD 2.0
changes for GPI 1.2  -> GPI 2.0

TAG: goload-6-0-16-3
DATE: 09/01/2020
STAFF: lec
CHANGES: TR13272/GPAD 2.0/remove lib/rolib.py

TAG: goload-6-0-16-2
DATE: 08/25/2020
STAFF: lec
CHANGES: TR13272/GPAD 2.0/added lib/rolib.py

TAG: goload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: goload-6-0-15-3
TAG: goload-6-0-15-2
DATE: 04/22/2020
STAFF: lec
CHANGES: lib/ecolib.py/ignore comments

TAG: goload-6-0-15-1
DATE: 02/11/2020
STAFF: lec
CHANGES: TR13231/Supply Reactone annotations in gaf (and gpad)

TAG: goload-6-0-13-13
DATE: 08/19/2019
STAFF: lec
CHANGES:TR13152/gomousenoctua/update qualifier

TAG: goload-6-0-13-12
TAG: goload-6-0-13-11
DATE: 03/26/2018
STAFF: sc
CHANGES:TR13059 - new url/filename for go rat load
 - updated index.html

TAG: goload-6-0-13-10
TAG: goload-6-0-13-9
DATE: 02/05/2019
STAFF: lec 
CHANGES:
TR13035/gorefgen/gorefgen.config.default
changed from J:161428 to J:265638

TAG: goload-6-0-13-8
DATE: 01/30/2019
STAFF: lec 
CHANGES:
TR13011/see mirror_wget/noctua location change
